Fix contrast and border on iOS
It appears safari on ios8 respects border/background-color settings, which means that the white+no border were rendering these inputs practically invisible on ios8

This commit adds a class to both of the input[type=text] so that we can appropriately scope the white background/grey border to text inputs only. I've used a class instead of input[type=text] so that it works in ie6 too.

With this added we no longer need to overwrite the width and the border which means ios does the default contrasty thing that we want.

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -269,8 +269,7 @@
           padding-left: $gutter-two-thirds;
         }
       }
-      li {
-
+      li{
         label {
           @include inline-block;
           margin-left:20px;
@@ -278,8 +277,6 @@
         }
         /* IE6 doesn't support psuedo selectors so scoping to checkbox-container instead of using a psuedo selector */
         input {
-          width: 12px;
-          border:none;
           margin: 3px $gutter-one-third 0 0;
           vertical-align: top;
           position:absolute;
@@ -288,7 +285,7 @@
     }
   }
 
-  input {
+  input.text {
     @include core-14;
     background: $white;
     border: 1px solid $border-colour;
